--- a/cadastro_anunciante.html
+++ b/cadastro_anunciante.html
@@ -67,38 +67,24 @@
                     <h1 class="mt-5 text-purple font-weight-bold">Cadastro anunciante</h1>
                     <form class="mt-5">
                         <div class="form-group">
-                            <label for="formGroupExampleInput">Nome de usuário</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Usuário"
-                                required>
+                            <label for="user">Nome de usuário</label>
+                            <input type="text" class="form-control" id="user" placeholder="Usuário" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput">Nome completo</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput"
-                                placeholder="Zezin dos santos" required>
+                            <label for="nome">Nome completo</label>
+                            <input type="text" class="form-control" id="nome" placeholder="Zezin dos santos" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput">CNPJ</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="CNPJ"
-                                required>
+                            <label for="cnpj">CNPJ</label>
+                            <input type="text" class="form-control" id="cnpj" placeholder="CNPJ" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput1">E-mail</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput1"
-                                placeholder="email@email.com" required>
+                            <label for="mail">E-mail</label>
+                            <input type="text" class="form-control" id="mail" placeholder="email@email.com" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput2">Senha</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
-                                required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput3">Tipo de anúncio</label><br>
-                            <select class="form-control">
-                                <option>Selecione um tipo de anúncio</option>
-                                <option>Escola</option>
-                                <option>Loja</option>
-                                <option>Ainda não decidi</option>
-                            </select>
+                            <label for="password">Senha</label>
+                            <input type="password" class="form-control" id="password" placeholder="Senha" required>
                         </div>
                         <button onClick="redirectAnunciante()" type="submit" id="cadastroBtn"
                             class="btn btn-default">Cadastrar</button>
