--- a/editar-conta-anunciante.html
+++ b/editar-conta-anunciante.html
@@ -76,29 +76,26 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="mt-5 text-purple font-weight-bold">Alterar dados </h1>
-                    <form class="mt-4">
+                    <form class="mt-3">
                         <div class="form-group">
-                            <label for="formGroupExampleInput">Nome de usuário</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" value="Usuário" required>
+                            <label for="user">Nome de usuário</label>
+                            <input type="text" class="form-control" id="user" placeholder="Usuário" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput">Nome completo</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" value="Jose de oliveira"
-                                required>
+                            <label for="nome">Nome completo</label>
+                            <input type="text" class="form-control" id="nome" placeholder="Zezin dos santos" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput">CNPJ</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" value="CNPJ" required>
+                            <label for="cnpj">CNPJ</label>
+                            <input type="text" class="form-control" id="cnpj" placeholder="CNPJ" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput1">E-mail</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput1" value="email@email.com"
-                                required>
+                            <label for="mail">E-mail</label>
+                            <input type="text" class="form-control" id="mail" placeholder="email@email.com" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput2">Senha atual (Obrigatório)</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput2"
-                                placeholder="Senha atual" required>
+                            <label for="password">Senha atual * (Obrigatório)</label>
+                            <input type="password" class="form-control" id="password" placeholder="Senha" required>
                         </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput3">Nova senha</label>
