--- a/criar-anuncio.html
+++ b/criar-anuncio.html
@@ -77,7 +77,6 @@
                 <div class="col-lg-12">
                     <h1 class="mt-5 text-purple font-weight-bold">Seus anúncios</h1>
                     <table class="table mt-5">
-
                         <thead>
                             <tr>
                                 <th scope="col">Nº</th>
@@ -191,7 +190,8 @@
                             </label>
                         </div>
                         <button type="submit" id="cadastroBtn" class="btn btn-default">Enviar para análise</button>
-                        <p class="mt-2"><b>* Ao clicar em enviar você será redirecionado a página de pagamento.</b></p>
+                        <p class="mt-2"><b><i class="fas fa-exclamation-triangle"></i> Ao clicar em enviar você será
+                                redirecionado a página de pagamento.</b></p>
                     </form>
                 </div>
 
@@ -279,7 +279,9 @@
                         </div>
                         <button type="submit" id="cadastroBtn" class="btn btn-default">Enviar modificação para
                             análise</button>
-                        <p class="mt-2"><b>* Selecionando adição de novos fundos você será redirecionado a página de
+                        <p class="mt-2"><b><i class="fas fa-exclamation-triangle"></i> Selecionando adição de novos
+                                fundos você
+                                será redirecionado a página de
                                 pagamento.</b></p>
                     </form>
                 </div>
