--- a/editar-conta-anunciante.html
+++ b/editar-conta-anunciante.html
@@ -106,8 +106,10 @@
                     </form>
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="mt-5 text-purple font-weight-bold">Informações para anunciantes</h1>
-
+                    <h1 class="mt-5 text-purple font-weight-bold">Como funciona?</h1>
+                    <h3 class="mt-3">1 - Crie seu anúncio e envie para análise</h3>
+                    <h3>2 - Faça o pagamento e aguarde a aprovação</h3>
+                    <h3>3 - Controle o valor diário e modifique informações dos seus anúncios através do menu</h3>
                 </div>
             </div>
         </div>
