--- a/editar-conta-admin.html
+++ b/editar-conta-admin.html
@@ -65,10 +65,10 @@
                     </div>
                     <div class="form-group">
                         <label for="senha">Senha atual *(Obrigatório)</label>
-                        <input type="text" class="form-control" id="senha" placeholder="senha" required>
+                        <input type="text" class="form-control" id="senha" placeholder="Senha atual" required>
                     </div>
                     <div class="form-group">
-                        <label for="nova-senha">Senha atual *(Obrigatório)</label>
+                        <label for="nova-senha">Nova senha</label>
                         <input type="text" class="form-control" id="nova-senha" placeholder="Nova senha" required>
                     </div>
                     <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar</button>
