--- a/escolas.html
+++ b/escolas.html
@@ -79,10 +79,10 @@
             <h1 class="text-purple font-weight-bold">Encontra uma escola perto de você!</h1>
             <form>
                 <select id="select-style" name="select-style" class="form-control mt-3">
-                    <option value=" none">Selecione ume estilo musical</option>
-                    <option value="classical">Classica</option>
-                    <option value="funk">Funk</option>
-                    <option value="samba">Samba</option>
+                    <option value=" none">Selecione uma cidade</option>
+                    <option value="curitiba">Curitiba</option>
+                    <option value="saopaulo">São Paulo</option>
+                    <option value="poa">Porto Alegre</option>
                 </select>
             </form>
             <div class="row mt-3">
