--- a/instrumentos.html
+++ b/instrumentos.html
@@ -2,188 +2,195 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll - Instrumentos musicais</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MusicAll - Instrumentos musicais</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
+  <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body class="font">
-    <div class="container-fluid">
-        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top  purple-clear">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><i class="fas fa-headphones-alt"></i> MusicAll </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
-                </button>
+  <div class="container-fluid">
+    <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top  purple-clear">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><i class="fas fa-headphones-alt"></i> MusicAll </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown active">
-                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Música
-                            </a>
-                            <div id="dropdown-menu" class="dropdown-menu purple-clear" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-light" href="historia.html">História</a>
-                                <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
-                                <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="piano.html">Piano digital</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="escolas.html">Escolas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="lojas.html">Lojas</a>
-                        </li>
-                    </ul>
-                    <div id="login" class="login justify-content-end">
-                        <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
-                                Login</button></a>
-                        <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
-                                Cadastre-se</button></a>
-                    </div>
-                    <div id="logged" class="login justify-content-end hide">
-                        Bem vindo, Usuário <i class="fas fa-user-circle"></i>
-                        <div class="user-options">
-                            <ul>
-                                <li>
-                                    <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
-                                </li>
-                                <li>
-                                    <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
-                                        Sair</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Música
+              </a>
+              <div id="dropdown-menu" class="dropdown-menu purple-clear" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item text-light" href="historia.html">História</a>
+                <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
+                <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="piano.html">Piano digital</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="escolas.html">Escolas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="lojas.html">Lojas</a>
+            </li>
+          </ul>
+          <div id="login" class="login justify-content-end">
+            <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
+                Login</button></a>
+            <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
+                Cadastre-se</button></a>
+          </div>
+          <div id="logged" class="login justify-content-end hide">
+            Bem vindo, Usuário <i class="fas fa-user-circle"></i>
+            <div class="user-options">
+              <ul>
+                <li>
+                  <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
+                </li>
+                <li>
+                  <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
+                    Sair</a>
+                </li>
+              </ul>
             </div>
-        </nav>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <section class="main-navigation mt-5">
+    <div class="container">
+      <h1 class="text-purple font-weight-bold">Instrumentos musicais</h1>
+      <form>
+        <select id="select-style" name="select-style" class="form-control mt-3">
+          <option value="none">Selecione um estilo musical</option>
+          <option value="blues">Blues</option>
+          <option value="bossa">Bossa nova</option>
+          <option value="opera">Ópera</option>
+          <option value="samba">Samba</option>
+        </select>
+      </form>
+      <ul class="list-unstyled">
+        <li class="media mt-5">
+          <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Violão</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+            purus odio, vestibulum in vulputate at.<br>
+            <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+          </div>
+        </li>
+
+        <hr class="mt-5 purple-clear">
+        <li class="media mt-5">
+          <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Violão</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+            purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+            <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+          </div>
+        </li>
+
+        <hr class="mt-5 purple-clear">
+        <li class="media mt-5">
+          <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Violão</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+            purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+            <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+          </div>
+        </li>
+
+        <hr class="mt-5 purple-clear">
+        <li class="media mt-5">
+          <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Violão</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+            purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+            <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+          </div>
+        </li>
+
+        <hr class="mt-5 purple-clear">
+        <li class="media mt-5">
+          <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Violão</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+            purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+            <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+          </div>
+        </li>
+
+      </ul>
     </div>
+  </section>
 
-    <section class="main-navigation mt-5">
-        <div class="container">
-            <h1 class="text-purple font-weight-bold">Instrumentos musicais</h1>
-            <ul class="list-unstyled">
-                <li class="media mt-5">
-                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
-                    <div class="media-body">
-                        <h5 class="mt-0 mb-1">Violão</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                        purus odio, vestibulum in vulputate at.<br>
-                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
-                    </div>
-                </li>
-
-                <hr class="mt-5 purple-clear">
-                <li class="media mt-5">
-                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
-                    <div class="media-body">
-                        <h5 class="mt-0 mb-1">Violão</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
-                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
-                    </div>
-                </li>
-
-                <hr class="mt-5 purple-clear">
-                <li class="media mt-5">
-                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
-                    <div class="media-body">
-                        <h5 class="mt-0 mb-1">Violão</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
-                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
-                    </div>
-                </li>
-
-                <hr class="mt-5 purple-clear">
-                <li class="media mt-5">
-                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
-                    <div class="media-body">
-                        <h5 class="mt-0 mb-1">Violão</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
-                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
-                    </div>
-                </li>
-
-                <hr class="mt-5 purple-clear">
-                <li class="media mt-5">
-                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
-                    <div class="media-body">
-                        <h5 class="mt-0 mb-1">Violão</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
-                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
-                    </div>
-                </li>
-
-            </ul>
+  <footer class="container-fluid">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-4">
+          <h3><i class="fas fa-thumbs-up"></i> Redes sociais</h3>
+          <div class="social">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter-square"></i>
+          </div>
         </div>
-    </section>
+        <div class="col-lg-4 footer-box">
+          <h3><i class="fas fa-bullhorn"></i> Anuncie conosco</h3>
+          <ul class="mt-3">
+            <li>
+              <a name="escola" href="cadastro_anunciante.html">Tenho uma escola <i
+                  class="fas fa-hand-point-left"></i></a>
+            </li>
+            <li>
+              <a name="loja" href="cadastro_anunciante.html">Tenho uma loja <i class="fas fa-hand-point-left"></i></a>
+            </li>
+          </ul>
 
-    <footer class="container-fluid">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3><i class="fas fa-thumbs-up"></i> Redes sociais</h3>
-                    <div class="social">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-twitter-square"></i>
-                    </div>
-                </div>
-                <div class="col-lg-4 footer-box">
-                    <h3><i class="fas fa-bullhorn"></i> Anuncie conosco</h3>
-                    <ul class="mt-3">
-                        <li>
-                            <a name="escola" href="cadastro_anunciante.html">Tenho uma escola <i
-                                    class="fas fa-hand-point-left"></i></a>
-                        </li>
-                        <li>
-                            <a name="loja" href="cadastro_anunciante.html">Tenho uma loja <i
-                                    class="fas fa-hand-point-left"></i></a>
-                        </li>
-                    </ul>
-
-                </div>
-                <div class="col-lg-4 footer-box">
-                    <h3><i class="far fa-bell"></i> Recebas as novidades</h3>
-                    <form>
-                        <input type="text" class="form-control mt-3" placeholder="Ex: musicall@gmail.com" required />
-                        <button class="mt-2 btn btn-default btn-block">Inscrever-se</button>
-                    </form>
-                </div>
-            </div>
         </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-        </script>
-    <script src="js/app.js"></script>
+        <div class="col-lg-4 footer-box">
+          <h3><i class="far fa-bell"></i> Recebas as novidades</h3>
+          <form>
+            <input type="text" class="form-control mt-3" placeholder="Ex: musicall@gmail.com" required />
+            <button class="mt-2 btn btn-default btn-block">Inscrever-se</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
