--- a/painel.html
+++ b/painel.html
@@ -2,160 +2,154 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll - Painel administrativo</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MusicAll - Painel administrativo</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
+  <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body class="font">
-    <div class=" container-fluid">
-        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top  purple-clear">
-            <div class="container">
-                <a class="navbar-brand" href="painel.html"><i class="fas fa-headphones-alt"></i> MusicAll - Painel </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
-                </button>
+  <div class=" container-fluid">
+    <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top  purple-clear">
+      <div class="container">
+        <a class="navbar-brand" href="painel.html"><i class="fas fa-headphones-alt"></i> MusicAll - Painel </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="painel.html">Usuários <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="painel-usuario-unico.html">Anúncios<span
-                                    class="sr-only">(current)</span></a>
-                        </li>
-                    </ul>
-                    <div id="logged" class="login justify-content-end">
-                        Admin <i class="fas fa-user-circle"></i>
-                        <div class="user-options">
-                            <ul>
-                                <li>
-                                    <a href="editar-conta-admin.html"><i class="fas fa-user-edit"></i> Alterar
-                                        dados</a>
-                                </li>
-                                <li>
-                                    <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
-                                        Sair</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="painel.html">Usuários <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="painel-anuncios.html">Anúncios<span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+          <div id="logged" class="login justify-content-end">
+            Admin <i class="fas fa-user-circle"></i>
+            <div class="user-options">
+              <ul>
+                <li>
+                  <a href="editar-conta-admin.html"><i class="fas fa-user-edit"></i> Alterar
+                    dados</a>
+                </li>
+                <li>
+                  <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
+                    Sair</a>
+                </li>
+              </ul>
             </div>
-        </nav>
-
-        <div class="main-navigation container mt-5">
-            <h1 class="mt-5 text-purple font-weight-bold">Usuários </h1>
-            <table class="table mt-5">
-                <thead>
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Usuário</th>
-                        <th scope="col">Nome completo</th>
-                        <th scope="col">CNPJ</th>
-                        <th scope="col">E-mail</th>
-                        <th scope="col">Anúncios</th>
-                        <th scope="col">Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>zezin</td>
-                        <td>Jose da silva</td>
-                        <td>444.444.444.444</td>
-                        <td>jose@gmail.com</td>
-                        <td><a href="painel-usuario-unico.html">(1)Visualizar</a></td>
-                        <td>
-                            <button onClick="showEditUser()" class="btn btn-warning"><i
-                                    class="far fa-edit"></i></button>
-                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Alex</td>
-                        <td>***</td>
-                        <td>***</td>
-                        <td>alex@alex.com</td>
-                        <td>***</td>
-                        <td>
-                            <button onClick="showEditUser()" class="btn btn-warning"><i
-                                    class="far fa-edit"></i></button>
-                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Naeltim</td>
-                        <td>***</td>
-                        <td>***</td>
-                        <td>Naeltim@naeltim.com</td>
-                        <td>***</a></td>
-                        <td>
-                            <button onClick="showEditUser()" class="btn btn-warning"><i
-                                    class="far fa-edit"></i></button>
-                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>Sherllen</td>
-                        <td>***</td>
-                        <td>***</td>
-                        <td>Sherllen@sherllen.com</td>
-                        <td>***</a></td>
-                        <td>
-                            <button onClick="showEditUser()" class="btn btn-warning"><i
-                                    class="far fa-edit"></i></button>
-                            <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
-            <div class="col-lg-6">
-
-                <form class="mt-4" id="painel-edit-user">
-                    <h1 class="mt-5 text-purple font-weight-bold">Editar usuário</h1>
-                    <div class="form-group">
-                        <label for="user">Nome de usuário</label>
-                        <input type="text" class="form-control" id="user" placeholder="Usuário" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="nome">Nome completo</label>
-                        <input type="text" class="form-control" id="nome" placeholder="Zezin dos santos" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="cnpj">CNPJ</label>
-                        <input type="text" class="form-control" id="cnpj" placeholder="CNPJ" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="mail">E-mail</label>
-                        <input type="text" class="form-control" id="mail" placeholder="email@email.com" required>
-                    </div>
-                    <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar</button>
-                </form>
-            </div>
+          </div>
         </div>
+      </div>
+    </nav>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-            </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-            </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-            </script>
-        <script src="js/app.js"></script>
+    <div class="main-navigation container mt-5">
+      <h1 class="mt-5 text-purple font-weight-bold">Usuários </h1>
+      <table class="table mt-5">
+        <thead>
+          <tr>
+            <th class="hide-mobile" scope="col">Id</th>
+            <th scope="col">Usuário</th>
+            <th class="hide-mobile" scope="col">Nome completo</th>
+            <th class="hide-mobile" scope="col">CNPJ</th>
+            <th class="hide-mobile" scope="col">E-mail</th>
+            <th scope="col">Anúncios</th>
+            <th scope="col">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th class="hide-mobile" scope="row">1</th>
+            <td>zezin</td>
+            <td class="hide-mobile">Jose da silva</td>
+            <td class="hide-mobile">444.444.444.444</td>
+            <td class="hide-mobile">jose@gmail.com</td>
+            <td><a href="painel-usuario-unico.html">(1)Visualizar</a></td>
+            <td>
+              <button onClick="showEditUser()" class="btn btn-warning"><i class="far fa-edit"></i></button>
+              <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <th class="hide-mobile" scope="row">2</th>
+            <td>Alex</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">alex@alex.com</td>
+            <td>***</td>
+            <td>
+              <button onClick="showEditUser()" class="btn btn-warning"><i class="far fa-edit"></i></button>
+              <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <th class="hide-mobile" scope="row">3</th>
+            <td>Naeltim</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">Naeltim@naeltim.com</td>
+            <td>***</a></td>
+            <td>
+              <button onClick="showEditUser()" class="btn btn-warning"><i class="far fa-edit"></i></button>
+              <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <th class="hide-mobile" scope="row">4</th>
+            <td>Sherllen</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">***</td>
+            <td class="hide-mobile">Sherllen@sherllen.com</td>
+            <td>***</a></td>
+            <td>
+              <button onClick="showEditUser()" class="btn btn-warning"><i class="far fa-edit"></i></button>
+              <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+      <div class="col-lg-6">
+
+        <form class="mt-4" id="painel-edit-user">
+          <h1 class="mt-5 text-purple font-weight-bold">Editar usuário</h1>
+          <div class="form-group">
+            <label for="user">Nome de usuário</label>
+            <input type="text" class="form-control" id="user" placeholder="Usuário" required>
+          </div>
+          <div class="form-group">
+            <label for="nome">Nome completo</label>
+            <input type="text" class="form-control" id="nome" placeholder="Zezin dos santos" required>
+          </div>
+          <div class="form-group">
+            <label for="cnpj">CNPJ</label>
+            <input type="text" class="form-control" id="cnpj" placeholder="CNPJ" required>
+          </div>
+          <div class="form-group">
+            <label for="mail">E-mail</label>
+            <input type="text" class="form-control" id="mail" placeholder="email@email.com" required>
+          </div>
+          <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar</button>
+        </form>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+      </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+      </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+      </script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
