--- a/index-logado.html
+++ b/index-logado.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="stylesheet" href="/css/main.css" />
-  <!-- <link rel="stylesheet" href="/css/animations.css" /> -->
 </head>
 
 <body>
@@ -17,12 +16,6 @@
     <div class="content-top">
       <h1>Onde surgiu a música que você ouve?</h1>
     </div>
-    <!--
-        <img src="img/nota.png" class="shape">
-        <img src="img/nota.png" class="shape-2">
-        <img src="img/nota.png" class="shape-3">
-        <img src="img/nota.png" class="shape-4">
-        -->
   </div>
   <div class="top container-fluid">
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -77,21 +70,16 @@
             </div>
           </div>
         </div>
-
-
-
-
       </div>
     </nav>
-
   </div>
+
   <section class="piano-home container mt-5">
     <div class="row">
       <div class="col-lg-6">
         <h2>Aprenda com a gente</h2>
-        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem
-          dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora
-          ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?</p>
+        <p>Já pensou aprender a tocar piano digitalmente? Comece agora a tocar com o nosso piano digital.
+          Você pode criar suas próprias músicas ou ver as sequências de músicas demo. </p>
       </div>
       <div class="col-lg-6">
         <h2>Piano digital</h2>
@@ -105,48 +93,88 @@
   </div>
   <section class="study container">
     <div class="row">
-      <div class="col-md-12">
-        <h2>Quer estudar música?</h2>
+      <div class="col-lg-12">
         <div class="row pt-3">
-          <div class="col-md-6">
-            <h4>Encontre uma escola</h4>
-            <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-              Já vivi
-              muito
-              sem
-              dinheiro.</p>
+          <div class="col-lg-6">
+            <h2><i class="fas fa-guitar text-purple"></i> Encontre uma escola</h2>
+            <p>Encontre uma <a href="escolas.html">escola</a> perto de você e comece a estudar o quanto antes!</p>
           </div>
-          <div class="col-md-6">
-            <h4>Encontre uma escola</h4>
-            <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-              Já vivi
-              muito
-              sem
-              dinheiro.</p>
+          <div class="col-lg-6">
+            <h2><i class="fas fa-drum text-purple"></i> Procurando por instrumentos?</h2>
+            <p>Encontra uma <a href="lojas.html">loja</a> perto de você que ofereça o melhor preço.</p>
           </div>
-          <div class="col-md-6">
-            <h4>Encontre uma escola</h4>
-            <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-              Já vivi
-              muito
-              sem
-              dinheiro.</p>
-          </div>
-          <div class="col-md-6">
-            <h4>Encontre uma escola</h4>
-            <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-              Já vivi
-              muito
-              sem
-              dinheiro.</p>
-          </div>
-
         </div>
-
       </div>
     </div>
 
+    <hr>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Comece a aprender hoje gratuitamente!</h2>
+
+        <div class="row pt-3">
+          <div class="col-lg-12">
+            <div class="card mb-3" style="max-width: 100%;">
+              <div class="row no-gutters">
+                <div class="col-lg-6">
+                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jt9oRHFpZfs" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Aula de violão</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ex blanditiis
+                      fugit? Iste laudantium fugiat dolorum a officiis. Rerum, pariatur iusto a amet beatae ipsam nulla
+                      neque eaque iste? Odio!.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3" style="max-width: 100%;">
+              <div class="row no-gutters">
+                <div class="col-lg-6">
+                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w-rBt4pSiqk" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Aula de piano</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ex blanditiis
+                      fugit? Iste laudantium fugiat dolorum a officiis. Rerum, pariatur iusto a amet beatae ipsam nulla
+                      neque eaque iste? Odio!.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3" style="max-width: 100%;">
+              <div class="row no-gutters">
+                <div class="col-lg-6">
+                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z6-dUR-y_CI" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Aula de canto</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ex blanditiis
+                      fugit? Iste laudantium fugiat dolorum a officiis. Rerum, pariatur iusto a amet beatae ipsam nulla
+                      neque eaque iste? Odio!.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+
   <footer class="container-fluid">
     <div class="container text-center">
       <div class="row">
