--- a/index.html
+++ b/index.html
@@ -102,26 +102,26 @@
       <div class="col-lg-12">
         <div class="row pt-3">
           <div class="col-lg-6">
-            <h2><i class="fas fa-guitar text-purple"></i> Encontre uma escola</h2>
+            <h2 class="font-weight-bold"><i class="fas fa-guitar text-purple"></i> Encontre uma escola</h2>
             <p>Encontre uma <a href="escolas.html">escola</a> perto de você e comece a estudar o quanto antes!</p>
           </div>
           <div class="col-lg-6">
-            <h2><i class="fas fa-drum text-purple"></i> Procurando por instrumentos?</h2>
+            <h2 class="font-weight-bold"><i class="fas fa-drum text-purple"></i> Procurando por instrumentos?</h2>
             <p>Encontra uma <a href="lojas.html">loja</a> perto de você que ofereça o melhor preço.</p>
           </div>
         </div>
       </div>
     </div>
 
-    <hr>
+    <hr class="text-purple purple-clear">
 
     <div class="row">
       <div class="col-lg-12">
-        <h2 class="mt-5">Comece a aprender hoje gratuitamente!</h2>
+        <h2 class="mt-5 text-purple font-weight-bold">Comece a aprender hoje gratuitamente!</h2>
 
         <div class="row pt-3">
           <div class="col-lg-12">
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jt9oRHFpZfs" frameborder="0"
@@ -139,7 +139,7 @@
               </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w-rBt4pSiqk" frameborder="0"
@@ -157,7 +157,7 @@
               </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z6-dUR-y_CI" frameborder="0"
