--- a/cadastro_anunciante.html
+++ b/cadastro_anunciante.html
@@ -87,7 +87,7 @@
                             <label for="password">Senha</label>
                             <input type="password" class="form-control" id="password" placeholder="Senha" required>
                         </div>
-                        <button onClick="redirectAnunciante()" type="submit" id="cadastroBtn"
+                        <button onClick="redirectAnunciante()" type="button" id="cadastroBtn"
                             class="btn btn-default">Cadastrar</button>
                     </form>
                 </div>
