--- a/criar-anuncio.html
+++ b/criar-anuncio.html
@@ -75,7 +75,17 @@
     <div class="container edit-user">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="mt-5 text-purple font-weight-bold">Seus anúncios</h1>
+          <h1 class="mt-5 text-purple font-weight-bold">Como funciona?</h1>
+          <h3 class="mt-3">1 - Crie seu anúncio e envie para análise</h3>
+          <h3>2 - Faça o pagamento e aguarde a aprovação</h3>
+          <h3>3 - Controle o valor diário a ser gasto e modifique informações dos seus anúncios através dos botões
+            abaixo</h3>
+
+          <h4 class="font-weight-bold">*** O valor por clique é de R$0,20 </h4>
+
+        </div>
+        <div class="col-lg-12">
+          <h1 class="mt-4 text-purple font-weight-bold">Seus anúncios</h1>
           <table class="table table-sm mt-5">
             <thead>
               <tr>
