--- a/piano.html
+++ b/piano.html
@@ -84,6 +84,8 @@
                   <div>Mostrar teclas</div>
                   <button class="record"></button>
                   <div>Gravar</div>
+                  <button class="stop"></button>
+                  <div>Parar</div>
                 </div>
               </div>
             </div>
