--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <label for="formGroupExampleInput2">Senha</label>
             <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha" required>
           </div>
-          <button onClick="firstLogin()" type="submit" id="cadastroBtn" class="btn btn-default">Cadastrar</button>
+          <button onClick="firstLogin()" type="button" id="cadastroBtn" class="btn btn-default">Cadastrar</button>
 
           <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a> /<a href="cadastro_anunciante.html"> Quero
               anunciar</a></p>
