--- a/primeiro-login.html
+++ b/primeiro-login.html
@@ -86,7 +86,8 @@
           <button onClick="btnActive(this)" class="btn-music btn">Indie</button>
           <button onClick="btnActive(this)" class="btn-music btn">Funk</button>
           <br><br>
-          <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar preferências</button>
+          <button type="button" id="cadastroBtn" class="btn btn-default" onClick="redirect()">Salvar
+            preferências</button>
         </div>
       </div>
     </div>
